# meli-poc-mld-sql-analysis

./: README.md
data-collection/: README.md  pyproject.toml
data-collection/data_collection/: main.py
